Fix marigin on mobile view.

--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -122,7 +122,7 @@ body {
 
 body {
   .container {
-    @apply max-w-7xl;
+    @apply max-w-7xl mx-auto;
   }
 }
 
